# kirin

./: .gitignore  Cargo.toml  README.md  justfile
dbschema/: default.esdl
kirin/: Cargo.toml  README.md
kirin/src/: errors.rs  main.rs  repository.rs  service.rs
kirin/src/types/: mod.rs  person.rs
profiles/: tenchi-32237-11284062461594447879_0.profraw  tenchi-32237-11713611065716962752_0.profraw  tenchi-32237-11867026661802241863_0.profraw  tenchi-32237-13523956145989022391_0.profraw  tenchi-32237-16340919741936204680_0.profraw  tenchi-32237-17622094850917646181_0.profraw  tenchi-32237-18130632267936243433_0.profraw  tenchi-32243-11284062461594447879_0.profraw  tenchi-32243-11713611065716962752_0.profraw  tenchi-32243-11867026661802241863_0.profraw  tenchi-32243-13523956145989022391_0.profraw  tenchi-32243-16340919741936204680_0.profraw  tenchi-32243-17622094850917646181_0.profraw  tenchi-32243-18130632267936243433_0.profraw  tenchi-32259-11284062461594447879_0.profraw  tenchi-32259-11713611065716962752_0.profraw  tenchi-32259-11867026661802241863_0.profraw  tenchi-32259-13523956145989022391_0.profraw  tenchi-32259-16340919741936204680_0.profraw  tenchi-32259-17622094850917646181_0.profraw  tenchi-32259-18130632267936243433_0.profraw  tenchi-32260-11284062461594447879_0.profraw  tenchi-32260-11713611065716962752_0.profraw  tenchi-32260-11867026661802241863_0.profraw  tenchi-32260-13523956145989022391_0.profraw  tenchi-32260-14207220589352597171_0.profraw  tenchi-32260-14481195709809406477_0.profraw  tenchi-32260-16340919741936204680_0.profraw  (+13 more)
src/: errors.rs  (+1 more)
(+13 files in other folders)
