[package]
name = "kirin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
edgedb-derive = "0.4.0"
edgedb-protocol = { version = "0.4.0", features = ["chrono"] }
edgedb-tokio = "0.3.0"
futures = "0.3.28"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "macro-diagnostics", "fast-rng", "serde"] }

[dev-dependencies]
mockall = "0.11.4"
rstest = "0.17.0"
